# pcfx_uploader

./: README.md
RP2040_device/: README.md
RP2040_device/EAGLE/fxloader_rev_A/: BOM.csv  FXLoader_rev_A.brd  FXLoader_rev_A.sch  assembly.csv
RP2040_device/releases/: fxloader_20221023.uf2  fxloader_20221030.uf2  fxloader_20221108.uf2  fxloader_20221112.uf2  fxloader_20230520.uf2  fxloader_20230523.uf2  fxloader_20230528.uf2  fxloader_20230601.uf2
RP2040_device/releases/bak/: fxloader_20221129.uf2
RP2040_device/src/: CMakeLists.txt  clock.pio  main.c  pcfxplex.pio
microcontroller_code/: Makefile  gd32vf103.asm  upload.asm
pc_code/: deploy.py  exec.py  fx_xfer_lib.py  getbios.py  getbram.py  getfxbmp.py  getram  getram.py  getram2  mandelbrot  putbram.py  putfxbmp.py  putram.py  send.py
pcfx_code/: Makefile  cdlink.txt  cdlink_client.txt  cdlink_getram2.txt  cdlink_gfx.txt  cdlinksender.txt  client  client.cue  client.s  defines.s  getbram.s  getram.s  getram2  getram2.s  loader.cue  loader.s  loader_gfx.s  macros.s  sender.s  set_version.py  version.s
